--- a/public_html/index-logged.html
+++ b/public_html/index-logged.html
@@ -29,7 +29,7 @@
 			<div class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="images/logo.png" alt="" class="logo">
+						<img src="images/logo@2x.png" alt="" class="logo">
 						<div class="logo-text">
 							<h1 class="site-title">Company name</h1>
 							<small class="site-description">Tagline goes here</small>
