--- a/public_html/single.html
+++ b/public_html/single.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Ecommerce Video Game | Single</title>
+		<title>ValhallaGames</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700|" rel="stylesheet" type="text/css">
@@ -31,15 +31,15 @@
 					<a href="index.html" id="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
-							<h1 class="site-title">Company name</h1>
-							<small class="site-description">Tagline goes here</small>
+							<h1 class="site-title">ValhallaGames</h1>
+							<small class="site-description">Ragnarok dos preços</small>
 						</div>
 					</a> <!-- #branding -->
 
 					<div class="right-section pull-right">
-						<a href="cart.html" class="cart"><i class="icon-cart"></i> 0 items in cart</a>
-						<a href="#">My Account</a>
-						<a href="#">Logout <small>(John Smith)</small></a>
+						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
+						<a href="#">Minha Conta</a>
+						<a href="#">Logout <small>(Usuário)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -53,7 +53,7 @@
 						</ul> <!-- .menu -->
 						<div class="search-form">
 							<label><img src="images/icon-search.png"></label>
-							<input type="text" placeholder="Search...">
+							<input type="text" placeholder="Procurar Games...">
 						</div> <!-- .search-form -->
 
 						<div class="mobile-navigation"></div> <!-- .mobile-navigation -->
@@ -97,17 +97,17 @@
 
 									<div class="addtocart-bar">
 										<form action="#">
-											<label for="#">Quantity</label>
+											<label for="#">Quantidade</label>
 											<select name="#">
 												<option value="1">1</option>
 												<option value="2">2</option>
 												<option value="3">3</option>
 											</select>
-											<input type="submit" value="Add to cart">
+											<input type="submit" value="Adicionar no Carrinho">
 										</form>
 
 										<div class="social-links square">
-											<strong>Share</strong>
+											<strong>Compartilhar</strong>
 											<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
 											<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
 											<a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
@@ -120,7 +120,7 @@
 						
 						<section>
 							<header>
-								<h2 class="section-title">Similiar Product</h2>
+								<h2 class="section-title">Talvez Goste</h2>
 							</header>
 							<div class="product-list">
 								<div class="product">
@@ -187,46 +187,42 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Information</h3>
+								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Site map</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="#">Sobre</a></li>
+									<li><a href="#">Perguntas Frequentes</a></li>
+									<li><a href="#">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Consumer Service</h3>
+								<h3 class="widget-title">Suporte</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Secure</a></li>
-									<li><a href="#">Shipping &amp; Returns</a></li>
-									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Segurança</a></li>
 									<li><a href="#">Orders &amp; Returns</a></li>
-									<li><a href="#">Group Sales</a></li>
+									<li><a href="#">Grupo de Vendas</a></li>
+                                                                        <li><a href="#">Contato</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">My Account</h3>
+								<h3 class="widget-title">Minha Conta</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Login/Register</a></li>
-									<li><a href="#">Settings</a></li>
-									<li><a href="#">Cart</a></li>
-									<li><a href="#">Order Tracking</a></li>
+									<li><a href="#">Login/Registro</a></li>
+									<li><a href="#">Configurações</a></li>
+									<li><a href="#">Carrinho</a></li>
 									<li><a href="#">Logout</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-6">
 							<div class="widget">
-								<h3 class="widget-title">Join our newsletter</h3>
+								<h3 class="widget-title">Receba Notícias</h3>
 								<form action="#" class="newsletter-form">
-									<input type="text" placeholder="Enter your email...">
-									<input type="submit" value="Subsribe">
+									<input type="text" placeholder="Email">
+									<input type="submit" value="Inscrever">
 								</form>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
