--- a/public_html/text-page.html
+++ b/public_html/text-page.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Ecommerce Video Game | Single</title>
+		<title>ValhallaGames</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700|" rel="stylesheet" type="text/css">
@@ -31,8 +31,8 @@
 					<a href="index.html" id="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
-							<h1 class="site-title">Company name</h1>
-							<small class="site-description">Tagline goes here</small>
+							<h1 class="site-title">ValhallaGames</h1>
+							<small class="site-description">Ragnarok dos preços</small>
 						</div>
 					</a> <!-- #branding -->
 
@@ -133,46 +133,42 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Information</h3>
+								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Site map</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="text-page.html">Sobre</a></li>
+									<li><a href="text-page.html">Perguntas Frequentes</a></li>
+									<li><a href="text-page.html">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Consumer Service</h3>
+								<h3 class="widget-title">Suporte</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Secure</a></li>
-									<li><a href="#">Shipping &amp; Returns</a></li>
-									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Segurança</a></li>
 									<li><a href="#">Orders &amp; Returns</a></li>
-									<li><a href="#">Group Sales</a></li>
+									<li><a href="#">Grupo de Vendas</a></li>
+                                                                        <li><a href="#">Contato</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">My Account</h3>
+								<h3 class="widget-title">Minha Conta</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Login/Register</a></li>
-									<li><a href="#">Settings</a></li>
-									<li><a href="#">Cart</a></li>
-									<li><a href="#">Order Tracking</a></li>
+									<li><a href="#">Login/Registro</a></li>
+									<li><a href="#">Configurações</a></li>
+									<li><a href="#">Carrinho</a></li>
 									<li><a href="#">Logout</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-6">
 							<div class="widget">
-								<h3 class="widget-title">Join our newsletter</h3>
+								<h3 class="widget-title">Receba Notícias</h3>
 								<form action="#" class="newsletter-form">
-									<input type="text" placeholder="Enter your email...">
-									<input type="submit" value="Subsribe">
+									<input type="text" placeholder="Email">
+									<input type="submit" value="Inscrever">
 								</form>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -199,17 +195,17 @@
 				<div class="col-md-6">
 					<h2 class="section-title">Login</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="password" placeholder="Password...">
+						<input type="text" placeholder="Usuário">
+						<input type="password" placeholder="Senha">
 						<input type="submit" value="Login">
 					</form>
 				</div> <!-- .column -->
 				<div class="col-md-6">
-					<h2 class="section-title">Create an account</h2>
+					<h2 class="section-title">Criar Conta</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="text" placeholder="Email address...">
-						<input type="submit" value="register">
+						<input type="text" placeholder="Usuário">
+						<input type="text" placeholder="Email">
+						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
 			</div> <!-- .row -->
