--- a/public_html/index-logged.html
+++ b/public_html/index-logged.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Ecommerce Video Game</title>
+		<title>ValhallaGames</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700|" rel="stylesheet" type="text/css">
@@ -31,15 +31,15 @@
 					<a href="index.html" id="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
-							<h1 class="site-title">Company name</h1>
+							<h1 class="site-title">ValhallaGames</h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 					</a> <!-- #branding -->
 
 					<div class="right-section pull-right">
-						<a href="cart.html" class="cart"><i class="icon-cart"></i> 0 items in cart</a>
-						<a href="#">My Account</a>
-						<a href="#">Logout <small>(John Smith)</small></a>
+						<a href="cart.html" class="cart"><i class="icon-cart"></i> Carrinho</a>
+						<a href="#">Minha Conta</a>
+						<a href="#">Logout <small>(Usuario)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -53,7 +53,7 @@
 						</ul> <!-- .menu -->
 						<div class="search-form">
 							<label><img src="images/icon-search.png"></label>
-							<input type="text" placeholder="Search...">
+							<input type="text" placeholder="Procurar Games...">
 						</div> <!-- .search-form -->
 
 						<div class="mobile-navigation"></div> <!-- .mobile-navigation -->
@@ -113,8 +113,8 @@
 					<div class="page">
 						<section>
 							<header>
-								<h2 class="section-title">New Products</h2>
-								<a href="#" class="all">Show All</a>
+								<h2 class="section-title">Novidades</h2>
+								<a href="#" class="all">Ver Mais</a>
 							</header>
 
 							<div class="product-list">
@@ -176,8 +176,8 @@
 
 						<section>
 							<header>
-								<h2 class="section-title">promotion</h2>
-								<a href="#" class="all">Show All</a>
+								<h2 class="section-title">Promoção</h2>
+								<a href="#" class="all">Ver Mais</a>
 							</header>
 
 							<div class="product-list">
@@ -249,25 +249,22 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Information</h3>
+								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Site map</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="#">Sobre</a></li>
+									<li><a href="#">Perguntas Frequentes</a></li>
+									<li><a href="#">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Consumer Service</h3>
+								<h3 class="widget-title">Atendimento</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Secure</a></li>
-									<li><a href="#">Shipping &amp; Returns</a></li>
-									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Segurança</a></li>
 									<li><a href="#">Orders &amp; Returns</a></li>
-									<li><a href="#">Group Sales</a></li>
+									<li><a href="#">Grupo de Vendas</a></li>
+                                                                        <li><a href="#">Contato</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -284,10 +281,10 @@
 						</div> <!-- column -->
 						<div class="col-md-6">
 							<div class="widget">
-								<h3 class="widget-title">Join our newsletter</h3>
+								<h3 class="widget-title">Receba Notícias</h3>
 								<form action="#" class="newsletter-form">
-									<input type="text" placeholder="Enter your email...">
-									<input type="submit" value="Subsribe">
+									<input type="text" placeholder="Email">
+									<input type="submit" value="Inscrever">
 								</form>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -314,17 +311,17 @@
 				<div class="col-md-6">
 					<h2 class="section-title">Login</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="password" placeholder="Password...">
+						<input type="text" placeholder="Usuário">
+						<input type="password" placeholder="Senha">
 						<input type="submit" value="Login">
 					</form>
 				</div> <!-- .column -->
 				<div class="col-md-6">
-					<h2 class="section-title">Create an account</h2>
+					<h2 class="section-title">Criar Conta</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="text" placeholder="Email address...">
-						<input type="submit" value="register">
+						<input type="text" placeholder="Usuário">
+						<input type="text" placeholder="Email">
+						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
 			</div> <!-- .row -->
