--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Ecommerce Video Game | Cart</title>
+		<title>ValhallaGames</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700|" rel="stylesheet" type="text/css">
@@ -37,8 +37,8 @@
 					</a> <!-- #branding -->
 
 					<div class="right-section pull-right">
-						<a href="cart.html" class="cart"><i class="icon-cart"></i> 0 items in cart</a>
-						<a href="#" class="login-button">Login/Registro</a>
+						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
+						<a href="#" class="login-button">Login | Registro</a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -70,7 +70,7 @@
 								
 								<p>Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
 								
-								<a href="cart.html" class="button">Add to cart</a>
+								<a href="cart.html" class="button">Add to car</a>
 							</div>
 
 							<img src="dummy/game-cover-1.jpg" class="slide-image">
@@ -112,8 +112,8 @@
 					<div class="page">
 						<section>
 							<header>
-								<h2 class="section-title">New Products</h2>
-								<a href="#" class="all">Show All</a>
+								<h2 class="section-title">Novidades</h2>
+								<a href="#" class="all">Ver Mais</a>
 							</header>
 
 							<div class="product-list">
@@ -175,8 +175,8 @@
 
 						<section>
 							<header>
-								<h2 class="section-title">promotion</h2>
-								<a href="#" class="all">Show All</a>
+								<h2 class="section-title">Promoção</h2>
+								<a href="#" class="all">Ver Mais</a>
 							</header>
 
 							<div class="product-list">
@@ -248,25 +248,22 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Information</h3>
+								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Site map</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="text-page.html">Sobre</a></li>
+									<li><a href="text-page.html">Perguntas Frequentes</a></li>
+									<li><a href="text-page.html">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Consumer Service</h3>
+								<h3 class="widget-title">Suporte</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Secure</a></li>
-									<li><a href="#">Shipping &amp; Returns</a></li>
-									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Segurança</a></li>
 									<li><a href="#">Orders &amp; Returns</a></li>
-									<li><a href="#">Group Sales</a></li>
+									<li><a href="#">Grupo de Vendas</a></li>
+                                                                        <li><a href="#">Contato</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -283,10 +280,10 @@
 						</div> <!-- column -->
 						<div class="col-md-6">
 							<div class="widget">
-								<h3 class="widget-title">Join our newsletter</h3>
+								<h3 class="widget-title">Receba Notícias</h3>
 								<form action="#" class="newsletter-form">
-									<input type="text" placeholder="Enter your email...">
-									<input type="submit" value="Subsribe">
+									<input type="text" placeholder="Email">
+									<input type="submit" value="Inscrever">
 								</form>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -313,17 +310,17 @@
 				<div class="col-md-6">
 					<h2 class="section-title">Login</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="password" placeholder="Password...">
+						<input type="text" placeholder="Usuário">
+						<input type="password" placeholder="Senha">
 						<input type="submit" value="Login">
 					</form>
 				</div> <!-- .column -->
 				<div class="col-md-6">
-					<h2 class="section-title">Create an account</h2>
+					<h2 class="section-title">Criar Conta</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="text" placeholder="Email address...">
-						<input type="submit" value="register">
+						<input type="text" placeholder="Usuário">
+						<input type="text" placeholder="Email">
+						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
 			</div> <!-- .row -->
