--- a/public_html/products.html
+++ b/public_html/products.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Ecommerce Video Game | Products</title>
+		<title>ValhallaGames</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,400,700|" rel="stylesheet" type="text/css">
@@ -31,15 +31,15 @@
 					<a href="index.html" id="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
-							<h1 class="site-title">Company name</h1>
-							<small class="site-description">Tagline goes here</small>
+							<h1 class="site-title">ValhallaGames</h1>
+							<small class="site-description">Ragnarok dos preços</small>
 						</div>
 					</a> <!-- #branding -->
 
 					<div class="right-section pull-right">
-						<a href="cart.html" class="cart"><i class="icon-cart"></i> 0 items in cart</a>
-						<a href="#">My Account</a>
-						<a href="#">Logout <small>(John Smith)</small></a>
+						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
+						<a href="#">Minha Conta</a>
+						<a href="#">Logout <small>(Usuário)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -74,24 +74,24 @@
 						<div class="filter-bar">
 							<div class="filter">
 								<span>
-									<label>Sort by:</label>
+									<label>Ordenar Por:</label>
 									<select name="#">
-										<option value="#">Popularity</option>
-										<option value="#">Highest Rating</option>
-										<option value="#">Lowest price</option>
+										<option value="#">Popularidade</option>
+										<option value="#">Novidade</option>
+										<option value="#">Menor Valor</option>
 									</select>
 								</span>
 								<span>
-									<label>Genre</label>
+									<label>Gênero</label>
 									<select name="#">
-										<option value="#">Show All</option>
-										<option value="#">Action</option>
-										<option value="#">Racing</option>
-										<option value="#">Strategy</option>
+										<option value="#">Todos</option>
+										<option value="#">Ação</option>
+										<option value="#">Corrida</option>
+										<option value="#">Estratégia</option>
 									</select>
 								</span>
 								<span>
-									<label>Show:</label>
+									<label>Mostrar por Página: </label>
 									<select name="#">
 										<option value="#">8</option>
 										<option value="#">16</option>
@@ -233,25 +233,22 @@
 					<div class="row">
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Information</h3>
+								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Site map</a></li>
-									<li><a href="#">About us</a></li>
-									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="#">Sobre</a></li>
+									<li><a href="#">Perguntas Frequentes</a></li>
+									<li><a href="#">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">Consumer Service</h3>
+								<h3 class="widget-title">Suporte</h3>
 								<ul class="no-bullet">
-									<li><a href="#">Secure</a></li>
-									<li><a href="#">Shipping &amp; Returns</a></li>
-									<li><a href="#">Shipping</a></li>
+									<li><a href="#">Segurança</a></li>
 									<li><a href="#">Orders &amp; Returns</a></li>
-									<li><a href="#">Group Sales</a></li>
+									<li><a href="#">Grupo de Vendas</a></li>
+                                                                        <li><a href="#">Contato</a></li>
 								</ul>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
