--- a/public_html/index-logged.html
+++ b/public_html/index-logged.html
@@ -32,7 +32,7 @@
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
 							<h1 class="site-title">ValhallaGames</h1>
-							<small class="site-description">Tagline goes here</small>
+							<small class="site-description">Ragnarok dos preços</small>
 						</div>
 					</a> <!-- #branding -->
 
