--- a/public_html/text-page.html
+++ b/public_html/text-page.html
@@ -38,8 +38,8 @@
 
 					<div class="right-section pull-right">
 						<a href="cart.html" class="cart"><i class="icon-cart"></i> 0 items in cart</a>
-						<a href="#">My Account</a>
-						<a href="#">Logout <small>(John Smith)</small></a>
+						<a href="#">Minha Conta</a>
+						<a href="#">Sair <small>(John Smith)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
