--- a/public_html/products.html
+++ b/public_html/products.html
@@ -254,7 +254,7 @@
 						</div> <!-- column -->
 						<div class="col-md-2">
 							<div class="widget">
-								<h3 class="widget-title">My Account</h3>
+								<h3 class="widget-title">Minha conta</h3>
 								<ul class="no-bullet">
 									<li><a href="#">Login/Registro</a></li>
 									<li><a href="#">Configurações</a></li>
@@ -265,10 +265,10 @@
 						</div> <!-- column -->
 						<div class="col-md-6">
 							<div class="widget">
-								<h3 class="widget-title">Join our newsletter</h3>
+								<<h3 class="widget-title">Receba Notícias</h3>
 								<form action="#" class="newsletter-form">
-									<input type="text" placeholder="Enter your email...">
-									<input type="submit" value="Subsribe">
+									<input type="text" placeholder="Email">
+									<input type="submit" value="Inscrever">
 								</form>
 							</div> <!-- .widget -->
 						</div> <!-- column -->
@@ -295,17 +295,17 @@
 				<div class="col-md-6">
 					<h2 class="section-title">Login</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="password" placeholder="Password...">
+						<input type="text" placeholder="Usuário">
+						<input type="password" placeholder="Senha">
 						<input type="submit" value="Login">
 					</form>
 				</div> <!-- .column -->
 				<div class="col-md-6">
-					<h2 class="section-title">Create an account</h2>
+					<h2 class="section-title">Criar Conta</h2>
 					<form action="#">
-						<input type="text" placeholder="Username...">
-						<input type="text" placeholder="Email address...">
-						<input type="submit" value="register">
+						<input type="text" placeholder="Usuário">
+						<input type="text" placeholder="Email">
+						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
 			</div> <!-- .row -->
