--- a/public_html/cart.html
+++ b/public_html/cart.html
@@ -39,7 +39,7 @@
 					<div class="right-section pull-right">
 						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
 						<a href="#">Usuário</a>
-						<a href="#">Logout <small>(Usuário)</small></a>
+						<a href="#">Sair <small>(Usuário)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
