--- a/public_html/index.html
+++ b/public_html/index.html
@@ -320,6 +320,7 @@
 					<form action="#">
 						<input type="text" placeholder="Usuário">
 						<input type="text" placeholder="Email">
+                                                <input type="password" placeholder="Senha">
 						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
