--- a/public_html/products.html
+++ b/public_html/products.html
@@ -39,7 +39,7 @@
 					<div class="right-section pull-right">
 						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
 						<a href="#">Minha Conta</a>
-						<a href="#">Logout <small>(Usuário)</small></a>
+						<a href="#">Sair <small>(Usuário)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -305,6 +305,7 @@
 					<form action="#">
 						<input type="text" placeholder="Usuário">
 						<input type="text" placeholder="Email">
+                                                <input type="password" placeholder="Senha">
 						<input type="submit" value="Criar">
 					</form>
 				</div> <!-- .column -->
