--- a/public_html/single.html
+++ b/public_html/single.html
@@ -39,7 +39,7 @@
 					<div class="right-section pull-right">
 						<a href="cart.html" class="cart"><i class="icon-cart"></i>Carrinho</a>
 						<a href="#">Minha Conta</a>
-						<a href="#">Logout <small>(Usuário)</small></a>
+						<a href="#">Sair <small>(Usuário)</small></a>
 					</div> <!-- .right-section -->
 
 					<div class="main-navigation">
@@ -255,7 +255,7 @@
 					</form>
 				</div> <!-- .column -->
 				<div class="col-md-6">
-					<h2 class="section-title">Create an account</h2>
+					<h2 class="section-title">Cre</h2>
 					<form action="#">
 						<input type="text" placeholder="Username...">
 						<input type="text" placeholder="Email address...">
