Adicionado perguntas frequentes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -251,7 +251,7 @@
 								<h3 class="widget-title">Informações</h3>
 								<ul class="no-bullet">
 									<li><a href="text-page.html">Sobre</a></li>
-									<li><a href="text-page.html">Perguntas Frequentes</a></li>
+									<li><a href="perguntas-frequentes.html">Perguntas Frequentes</a></li>
 									<li><a href="text-page.html">Politica de Privacidade</a></li>
 								</ul>
 							</div> <!-- .widget -->
