Pagina Sobre completa

--- a/public_html/text-page.html
+++ b/public_html/text-page.html
@@ -70,17 +70,11 @@
 				<div class="container">
 					<div class="page">
 						
-						<h2>Neque porro quisquam dolorem ipsum</h2>
-						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam quis nostrum exercitationem ullam corporis suscipit laboriosam nisi ut aliquid ex ea commodi consequatur<a href="#"> quis autem vel eum iure </a>reprehenderit qui in ea voluptate velit esse quam nihil molestiae. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa officia deserunt mollitia animi.</p>
+                                            <h2><Strong>ValhallaGames</strong></h2>
+						<p>A ValhallaGames tem o objetivo de facilitar a entrada de produtoras e desenvolvedores em mercados locais de jogos, com valores mais aceitáveis. A plataforma é a porta de entrada da produção cultural na área de games. Na ValhallaGames os desenvolvedores de todos os portes, podem vender e mostrar suas criações. </p>
 
-						<h2>Nemo enim ipsam voluptatem quia voluptas</h2>
-						<p>Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-						<ol>
-							<li>Phasellus vitae enim non quam adipiscing suscipit nec quis mauris.</li>
-							<li>Vivamus feugiat erat vel pellentesque luctus.</li>
-							<li>Nullam ac urna facilisis, fringilla arcu in, sodales velit.</li>
-							<li>Nam tempus nisi ornare urna mollis cursus.</li>
-						</ol>
+                                                <h2><strong>Nossa Missão:</strong></h2>
+						<p>Possibilitar que todo e qualquer gamer do mundo tenha acesso a jogos a um preço justo e com conteúdo localizado em sua língua.</p>
 
 						<div class="row">
 							<div class="col-md-3">
@@ -88,8 +82,7 @@
 									<div class="feature-icon">
 										<i class="icon-box-check"></i>
 									</div>
-									<h3 class="feature-title">Safe pack</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                                                    <h3 class="feature-title"><strong>Keys 100% Funcionais</strong></h3>
 								</div> <!-- .feature -->
 							</div> <!-- .column -->
 							<div class="col-md-3">
@@ -97,8 +90,7 @@
 									<div class="feature-icon">
 										<i class="icon-plane-globe"></i>
 									</div>
-									<h3 class="feature-title">World wide</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                                                    <h3 class="feature-title"><strong>Compre do Mundo todo</strong></h3>
 								</div> <!-- .feature -->
 							</div> <!-- .column -->
 							<div class="col-md-3">
@@ -106,8 +98,7 @@
 									<div class="feature-icon">
 										<i class="icon-car"></i>
 									</div>
-									<h3 class="feature-title">Fast Delivery</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                                                    <h3 class="feature-title"><Strong>Comprou, Chegou</strong></h3>
 								</div> <!-- .feature -->
 							</div> <!-- .column -->
 							<div class="col-md-3">
@@ -115,15 +106,10 @@
 									<div class="feature-icon">
 										<i class="icon-customer-service"></i>
 									</div>
-									<h3 class="feature-title">24/h Support</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                                                    <h3 class="feature-title"><Strong>Suporte 24/h e forum</strong></h3>
 								</div> <!-- .feature -->
 							</div> <!-- .column -->
 						</div> <!-- .row -->
-
-						<h2>Nemo enim ipsam voluptatem quia voluptas</h2>
-						<p>Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-						
 					</div>
 				</div> <!-- .container -->
 			</main> <!-- .main-content -->
